# cmake-gtest-example

./: README.md
src/: CMakeLists.txt
src/cmake-modules/: CodeCoverage.cmake
src/main/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test/main/: AnotherTest.cpp  CMakeLists.txt  ExampleTest.cpp
